--- a/wid_osnovni_pogled.ui
+++ b/wid_osnovni_pogled.ui
@@ -171,6 +171,15 @@
             <property name="enabled">
              <bool>true</bool>
             </property>
+            <property name="editTriggers">
+             <set>QAbstractItemView::NoEditTriggers</set>
+            </property>
+            <property name="selectionMode">
+             <enum>QAbstractItemView::NoSelection</enum>
+            </property>
+            <property name="selectionBehavior">
+             <enum>QAbstractItemView::SelectRows</enum>
+            </property>
            </widget>
           </item>
          </layout>
@@ -236,6 +245,15 @@
            <widget class="QTableWidget" name="tbl_potni_nalogi">
             <property name="enabled">
              <bool>true</bool>
+            </property>
+            <property name="editTriggers">
+             <set>QAbstractItemView::NoEditTriggers</set>
+            </property>
+            <property name="selectionMode">
+             <enum>QAbstractItemView::NoSelection</enum>
+            </property>
+            <property name="selectionBehavior">
+             <enum>QAbstractItemView::SelectRows</enum>
             </property>
            </widget>
           </item>
