PREIMENOVANJE GLAVNEGA MENIJA IZ NASTAVITVE V PODATKI
closes #89

--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -204,7 +204,7 @@ border:0;</string>
    </widget>
    <widget class="QMenu" name="menuNastavitve">
     <property name="title">
-     <string>Nastavitve</string>
+     <string>Podatki</string>
     </property>
     <addaction name="actionPodjetje"/>
     <addaction name="actionUporabniki"/>
