--- a/vizitka.ui
+++ b/vizitka.ui
@@ -5,12 +5,15 @@
   <property name="windowModality">
    <enum>Qt::ApplicationModal</enum>
   </property>
+  <property name="enabled">
+   <bool>false</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>583</width>
-    <height>611</height>
+    <width>766</width>
+    <height>767</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -57,32 +60,32 @@
          <item row="1" column="0">
           <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>Različica</string>
+            <string>Različica programa</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
+         <item row="4" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
             <string>Avtor</string>
            </property>
           </widget>
          </item>
-         <item row="5" column="0">
+         <item row="7" column="0">
           <widget class="QLabel" name="label_4">
            <property name="text">
             <string>Pogoji uporabe</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="0">
+         <item row="6" column="0">
           <widget class="QLabel" name="label_5">
            <property name="text">
             <string>Novosti</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="0">
+         <item row="5" column="0">
           <widget class="QLabel" name="label_6">
            <property name="text">
             <string>Predstavitev</string>
@@ -90,32 +93,44 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QLineEdit" name="lineEdit">
+          <widget class="QLineEdit" name="txt_ime_programa">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>BenRačun</string>
            </property>
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEdit_2">
+          <widget class="QLineEdit" name="txt_razlicica_programa">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>0.9</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
-          <widget class="QLineEdit" name="lineEdit_3">
+         <item row="4" column="1">
+          <widget class="QLineEdit" name="txt_avtor_programa">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>Pr' Bubijih</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="1">
-          <widget class="QPlainTextEdit" name="plainTextEdit">
+         <item row="5" column="1">
+          <widget class="QPlainTextEdit" name="txt_predstavitev_programa">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="minimumSize">
             <size>
              <width>300</width>
-             <height>100</height>
+             <height>200</height>
             </size>
            </property>
            <property name="maximumSize">
@@ -126,18 +141,11 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
-          <widget class="QTextEdit" name="textEdit">
-           <property name="maximumSize">
-            <size>
-             <width>16777215</width>
-             <height>100</height>
-            </size>
+         <item row="7" column="1">
+          <widget class="QPlainTextEdit" name="txt_pogoji_uporabe">
+           <property name="enabled">
+            <bool>false</bool>
            </property>
-          </widget>
-         </item>
-         <item row="5" column="1">
-          <widget class="QPlainTextEdit" name="plainTextEdit_2">
            <property name="maximumSize">
             <size>
              <width>16777215</width>
@@ -146,60 +154,47 @@
            </property>
           </widget>
          </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>Različica baze</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QLineEdit" name="txt_razlicica_baze">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="txt_datum_posodobitve_programa"/>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_8">
+           <property name="text">
+            <string>Datum posodobitve programa</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="1">
+          <widget class="QPlainTextEdit" name="txt_novosti"/>
+         </item>
         </layout>
-       </item>
-       <item>
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </item>
-     <item>
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
     </layout>
-   </item>
-   <item row="1" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>36</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
  <tabstops>
-  <tabstop>lineEdit</tabstop>
-  <tabstop>lineEdit_2</tabstop>
-  <tabstop>lineEdit_3</tabstop>
-  <tabstop>plainTextEdit</tabstop>
-  <tabstop>textEdit</tabstop>
-  <tabstop>plainTextEdit_2</tabstop>
+  <tabstop>txt_ime_programa</tabstop>
+  <tabstop>txt_razlicica_programa</tabstop>
+  <tabstop>txt_avtor_programa</tabstop>
+  <tabstop>txt_predstavitev_programa</tabstop>
+  <tabstop>txt_pogoji_uporabe</tabstop>
  </tabstops>
  <resources/>
  <connections/>
