ZAČETNI COMMIT KOPIRANJA TABEL PRI POTNIH NALOGIH
Program omogoča kopiranje izbranih tabel v obliki ustrezni za prenos v
Word in Excell oz. njuni alternativi. Trenutno deluje samo pri pregledu
potnih nalogov, a je kodo moč prenesti tudi v ostale preglede.

#96

--- a/wid_potninalogi.ui
+++ b/wid_potninalogi.ui
@@ -121,6 +121,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="btn_kopiraj">
+       <property name="text">
+        <string>Copy - Paste</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -139,6 +146,9 @@
     <widget class="QTableWidget" name="tbl_potninalogi">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
      </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::ExtendedSelection</enum>
