--- a/tiskanje.ui
+++ b/tiskanje.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>tiskanje</class>
  <widget class="QDialog" name="tiskanje">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
