--- a/wid_racuni.ui
+++ b/wid_racuni.ui
@@ -127,6 +127,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="btn_kopiraj">
+       <property name="text">
+        <string>Copy - Paste</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
