PRERAČUNAVANJE PRISOTNOSTI PRI DELU, STROŠKOV PREHRANE
Iz odsotnosti z delavnega meta program preračuna število prisotnih dni, ki
se tudi štejejo za upravičenost do malice. Iz tega podatka preračuna
strošek za malico za posamezni mesec.

Kratek popravek omogoča izbor cele vrstice. V kolikor vrstica še ni vnešena
ima polje "cena malice" onemogočeno, čeprav je izpolnjeno. Ob vnosu se
polje shrani v bazo.

#101

--- a/wid_stroskiprehrane.ui
+++ b/wid_stroskiprehrane.ui
@@ -95,7 +95,14 @@
     </layout>
    </item>
    <item>
-    <widget class="QTableWidget" name="tbl_stroski_prehrane"/>
+    <widget class="QTableWidget" name="tbl_stroski_prehrane">
+     <property name="selectionMode">
+      <enum>QAbstractItemView::ExtendedSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
